# aulas

c/1_trees-insertion/: main.c  makefile
c/2_tree-avl/: README.md  avl.c  avl.h  main  main.c
c/3_unit-testing/: .gitignore  makefile  pyproject.toml
c/3_unit-testing/src/: fact.c
c/3_unit-testing/tests/: fact_test.py
c/4-linked-list/: linked_list.c  linked_list.h  main.c
c/5-heap/: heap.c  heap.h  main.c
c/trees-insertion/: .gitignore  main.c  tree.c  tree.h
