[tool.poetry]
name = "testing"
version = "0.1.0"
description = ""
authors = ["R <rafael.figueiredo91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
